--- a/config/database.yml
+++ b/config/database.yml
@@ -62,6 +62,10 @@ development:
 test:
   <<: *default
   database: shop_api_test
+  host: localhost
+  username: postgres
+  password: 123
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
